--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <title>Vue School Chat Room</title>
   <script src="https://unpkg.com/vue"></script>
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-  <script src="https://unpkg.com/native-toast@1.2.1/dist/native-toast.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/6.1.1/firebase-firestore.js"></script>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/native-toast@1.2.1/dist/native-toast.css">
 </head>
 <body>
 <div id="chat" class="container">
@@ -17,23 +17,13 @@
       <!-- nickname -->
       <h6 class="card-subtitle mb-2 text-muted">{{ message.nickname }}</h6>
       <!-- content -->
-      <p v-if="message !== editingMessage" class="card-text">{{ message.text }}</p>
-      <textarea v-else v-model="messageText" class="form-control"></textarea>
-      <!-- actions -->
-      <div v-if="message !== editingMessage">
-        <a @click.prevent="deleteMessage(message)" href="#" class="card-link">delete</a>
-        <a @click.prevent="editMessage(message)" href="#" class="card-link">edit</a>
-      </div>
-      <div v-else>
-        <a @click.prevent="cancelEditing" href="#" class="card-link">cancel</a>
-        <a @click.prevent="updateMessage" href="#" class="card-link">update</a>
-      </div>
+      <p class="card-text">{{ message.text }}</p>
     </div>
   </div>
 
   <hr>
   <!-- New Message -->
-  <form v-if="!editingMessage" @submit.prevent="storeMessage">
+  <form @submit.prevent="storeMessage">
     <div class="form-group">
       <label>Message:</label>
       <textarea v-model="messageText" class="form-control"></textarea>
@@ -48,18 +38,42 @@
 
 
 <script type="text/javascript">
-  const config = {
-    apiKey: "AIzaSyCIretB6FXPfHmk3Ib5zokwZ43FVjGZbc0",
-    authDomain: "vue-school-chat-room.firebaseapp.com",
-    databaseURL: "https://vue-school-chat-room.firebaseio.com",
-    projectId: "vue-school-chat-room",
-    storageBucket: "vue-school-chat-room.appspot.com",
-    messagingSenderId: "425342500253"
-  }
-  firebase.initializeApp(config)
 
-  const database = firebase.database()
-  const messagesRef = database.ref('messages')
+  const config = {
+    apiKey: "AIzaSyBMIwuEL3Wh-j6tU9jHRq97FeVqhsXb4kw",
+    authDomain: "mpk-mytrip.firebaseapp.com",
+    databaseURL: "https://mpk-mytrip.firebaseio.com",
+    projectId: "mpk-mytrip",
+    storageBucket: "mpk-mytrip.appspot.com",
+    messagingSenderId: "642327630522",
+    appId: "1:642327630522:web:2ae02187c7c3fce0"
+  };
+
+  // Initialize Firebase
+  const app = firebase.initializeApp(config);
+  const db = firebase.firestore(app);
+
+  firebase.firestore(app).enablePersistence().catch((err) => {
+      if (err.code === 'failed-precondition') {
+        console.log(err);
+      } else if (err.code === 'unimplemented') {
+        console.log(err);
+      }
+    console.log(err.code);
+  });
+
+
+  console.log(db.collection("users").get());
+
+  // db.collection("users").add({
+  //   first: "Ada",
+  //   last: "Lovelace",
+  //   born: 1815
+  // }).then((docRef) => {
+  //   console.log("Document written with ID: ", docRef.id);
+  // }).catch((error) => {
+  //   console.error("Error adding document: ", error);
+  // });
 
   new Vue({
     el: "#chat",
@@ -67,64 +81,14 @@
     data: {
       messages: [],
       messageText: '',
-      nickname: 'hootlex',
-      editingMessage: null
+      nickname: 'hootlex'
     },
 
     methods: {
       storeMessage () {
-        messagesRef.push({text: this.messageText, nickname: this.nickname})
+        this.messages.push({text: this.messageText, nickname: this.nickname})
         this.messageText = ''
-      },
-      deleteMessage (message) {
-        messagesRef.child(message.id).remove()
-      },
-      editMessage (message) {
-        this.editingMessage = message
-        this.messageText = message.text
-      },
-      cancelEditing () {
-        this.editingMessage = null
-        this.messageText = ''
-      },
-      updateMessage () {
-        messagesRef.child(this.editingMessage.id).update({text: this.messageText})
-        this.cancelEditing()
       }
-    },
-
-    created () {
-      // value = snapshot.val() | key = snapshot.key
-      messagesRef.on('child_added', snapshot => {
-        this.messages.push({...snapshot.val(), id: snapshot.key})
-        if (snapshot.val().nickname !== this.nickname) {
-          nativeToast({
-              message: `New message by ${snapshot.val().nickname}`,
-              type: 'success'
-          })
-        }
-      })
-      messagesRef.on('child_removed', snapshot => {
-        const deletedMessage = this.messages.find(message => message.id === snapshot.key)
-        const index = this.messages.indexOf(deletedMessage)
-        this.messages.splice(index, 1)
-        if (snapshot.val().nickname !== this.nickname) {
-          nativeToast({
-              message: `Message deleted by ${snapshot.val().nickname}`,
-              type: 'warning'
-          })
-        }
-      })
-      messagesRef.on('child_changed', snapshot => {
-        const updatedMessage = this.messages.find(message => message.id === snapshot.key)
-        updatedMessage.text = snapshot.val().text
-        if (snapshot.val().nickname !== this.nickname) {
-          nativeToast({
-              message: `Message edited by ${snapshot.val().nickname}`,
-              type: 'info'
-          })
-        }
-      })
     }
   })
 </script>
